Bug 1156401 - Fix ContextMenu handling when building Fennec with C++ APZ. r=kats, r=botond

This commit deals with the situation where there's no scrollable element
on a fennec's page. It uses the Top Most root element (Xul viewport)
instead.

So this fixes the situation when the tap/click was not being send to the
correct dom element.